--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ---------------- #
 #   Main Configs   #
 # ---------------- #
-baseurl:
+baseurl:enuff.github.io
 url: https://enuff.github.io
 date_format: "ordinal"
 title: Chenzt
