--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ---------------- #
 #   Main Configs   #
 # ---------------- #
-baseurl: https://enuff.github.io/
-url: https://enuff.github.io/
+baseurl: https://enuff.github.io
+url: https://enuff.github.io
 date_format: "ordinal"
 title: enuff
 subtitle: "打码改变人生"
